@@ -1,4 +1,5 @@
 0.10
+* Local package repository support
 * PEP-8 syntax
 
 0.9 "bafana" (2011-02-06)
